[update] readme file

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Jest is a testing framework by Facebook, based on Jasmine, so including even more features.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
